Enhance Notely app with new features and structure
- Updated .gitignore to include android and ios directories, and environment files.
- Changed app.json to update the app name to "Notely" and added versioning, splash screen configurations, and platform-specific settings.
- Modified package.json to include new dependencies for improved functionality and updated existing ones.
- Introduced new components for layout, navigation, and user authentication, including login, signup, and profile editing screens.
- Implemented note management features with create, edit, and delete functionalities.
- Added context for authentication and user information management.
- Integrated image handling and API interactions for notes and user profiles.
- Included new icons and styles for a cohesive UI experience.
- Added loading and error handling components for better user feedback.
- Included assets for onboarding and no data states.

This commit significantly enhances the app's functionality and user experience.

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ node_modules/
 .expo/
 dist/
 web-build/
+android/
+ios/
 expo-env.d.ts
 
 # Native
@@ -36,3 +38,5 @@ yarn-error.*
 *.tsbuildinfo
 
 app-example
+.env.development
+.env.production
