--- a/package.json
+++ b/package.json
@@ -4,24 +4,39 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/dev": "^0.2.3",
+    "@gorhom/bottom-sheet": "^5.0.6",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/drawer": "^7.1.1",
+    "@shopify/flash-list": "1.7.1",
+    "axios": "^1.7.9",
     "expo": "^52.0.16",
-    "expo-constants": "~17.0.2",
+    "expo-constants": "~17.0.3",
+    "expo-dev-client": "~5.0.7",
+    "expo-font": "~13.0.2",
+    "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.2",
     "expo-router": "~4.0.2",
-    "expo-splash-screen": "~0.29.7",
+    "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
+    "formik": "^2.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-web": "~0.19.6"
+    "react-native-svg": "^15.10.1",
+    "react-native-web": "~0.19.6",
+    "expo-image-manipulator": "~13.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
