--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-constants": "~17.0.3",
     "expo-dev-client": "~5.0.7",
     "expo-font": "~13.0.2",
+    "expo-image-manipulator": "~13.0.5",
     "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.2",
     "expo-router": "~4.0.2",
@@ -28,6 +29,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-config": "^1.5.3",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.12.5",
@@ -35,8 +37,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "^15.10.1",
-    "react-native-web": "~0.19.6",
-    "expo-image-manipulator": "~13.0.5"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
