--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-svg": "^15.10.1",
-    "react-native-web": "~0.19.6"
+    "react-native-svg": "^15.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
