Refactor authentication flow and update UI components
- Updated app.json to replace splash screen image with a new icon.
- Enhanced authentication context to manage login route state.
- Modified layout components to utilize the new login route state for navigation.
- Improved login and signup button handlers for better user experience.
- Refactored DrawerLayout to include logout functionality with feedback messages.
- Cleaned up unused state variables and improved code readability across components.

This commit improves the authentication flow and enhances the overall user interface of the app.

--- a/app.json
+++ b/app.json
@@ -22,11 +22,11 @@
     "android": {
       "package": "com.sakshammathur.notely",
       "splash": {
-        "resizeMode": "contain",
         "backgroundColor": "#F8EEE2",
         "width": 100,
         "height": 100,
-        "image": "./assets/images/splash.png"
+        "resizeMode": "contain",
+        "image": "./assets/images/icon.png"
       }
     },
     "ios": {
@@ -36,7 +36,7 @@
         "width": 100,
         "height": 100,
         "backgroundColor": "#F8EEE2",
-        "image": "./assets/images/splash.png"
+        "image": "./assets/images/icon.png"
       }
     }
   }
