--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
     "react-native-config": "^1.5.3",
+    "react-native-event-listeners": "^1.0.7",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.12.5",
